LDEV-4054: updating English

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # CVS ID: $Id$ Exported from the LAMS Community by Ernie Ghiglione on Sun Jul 17 02:24:47 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 03:12:33 CST 2016 
  
 #=================== labels for Assessment =================# 
 
@@ -26,7 +26,7 @@ label.authoring.basic.penalty.factor  =Penalty factor
 label.authoring.basic.general.feedback  =General feedback
 label.authoring.basic.shuffle.the.choices  =Shuffle the choices?
 label.authoring.basic.add.question  =Add question
-label.authoring.basic.question.list.title  =Question List
+label.authoring.basic.question.list.title  =Question list
 label.authoring.basic.list.header.type  =Type
 label.authoring.basic.list.header.question  =Question
 label.authoring.basic.type.multiple.choice  =Multiple choice
@@ -48,7 +48,7 @@ label.authoring.basic.option.accepted.error  =Accepted error
 label.authoring.basic.unit.unit  =Unit
 label.authoring.basic.unit.multiplier  =Multiplier
 label.authoring.basic.none  =None
-label.authoring.choice.add.multiple.choice  =Add Multiple Choice
+label.authoring.choice.add.multiple.choice  =Add multiple choice
 label.authoring.choice.field.required  =This field is required.
 label.authoring.choice.enter.integer  =Please enter an integer.
 label.authoring.choice.enter.float  =Please enter a floating point number.
@@ -59,35 +59,35 @@ label.authoring.choice.overall.feedback  =Overall feedback
 label.authoring.choice.feedback.on.correct  =For any correct response
 label.authoring.choice.feedback.on.partially.correct  =For any partially correct response
 label.authoring.choice.feedback.on.incorrect  =For any incorrect response
-label.authoring.choice.add.option  =Add Blank Option
-label.authoring.matching.pairs.add.matching.pairs  =Add Matching Pairs
-label.authoring.matching.pairs.matching.pairs  =Matching Pairs
+label.authoring.choice.add.option  =Add another answer
+label.authoring.matching.pairs.add.matching.pairs  =Add question
+label.authoring.matching.pairs.matching.pairs  =Matching pairs
 label.authoring.matching.pairs.error.one.matching.pair  =You should provide at least 1 matching pair.
-label.authoring.matching.pairs.add.matching.pair  =Add Blank Matching Pair
+label.authoring.matching.pairs.add.matching.pair  =Add another
 label.authoring.short.answer.no.case.unimportant  =No, case is unimportant
 label.authoring.short.answer.yes.case.must.match  =Yes, case must match
 label.authoring.short.answer.case.sensitivity  =Case sensitivity
 label.authoring.short.answer.answers  =Answers
-label.authoring.short.answer.add.answer  =Add Blank Answer
-label.authoring.short.answer.add.short.answer  =Add Short Answer
-label.authoring.true.false.question  =True/False Question
+label.authoring.short.answer.add.answer  =Add another answer
+label.authoring.short.answer.add.short.answer  =Add question
+label.authoring.true.false.question  =True/False question
 label.authoring.true.false.correct.answer  =Correct answer
 label.authoring.true.false.false  =False
 label.authoring.true.false.true  =True
 label.authoring.true.false.feedback.on.true  =Feedback for the response 'True'.
 label.authoring.true.false.feedback.on.false  =Feedback for the response 'False'.
-label.authoring.true.false.add.true.false  =Add True/False
+label.authoring.true.false.add.true.false  =Add question
 label.authoring.numerical.question  =Numerical question
 label.authoring.numerical.answers  =Answers
 label.authoring.numerical.units  =Units
 label.authoring.numerical.error.answer  =You should provide at least one possible answer.
-label.authoring.numerical.add.answer  =Add Blank Answer
-label.authoring.numerical.add.numerical  =Add Numerical Question
-label.authoring.numerical.add.unit  =Add Blank Unit
-label.authoring.essay.add.essay  =Add Essay
-label.authoring.ordering.add.ordering  =Add Ordering
+label.authoring.numerical.add.answer  =Add another answer
+label.authoring.numerical.add.numerical  =Add question
+label.authoring.numerical.add.unit  =Add another unit
+label.authoring.essay.add.essay  =Add question
+label.authoring.ordering.add.ordering  =Add question
 label.authoring.advance.allow.students.overall.feedback  =Display overall feedback at the end of each attempt
-label.authoring.advance.time.limit  =Time limit(minutes)
+label.authoring.advance.time.limit  =Time limit (minutes)
 label.authoring.advance.questions.per.page  =Questions per page
 label.authoring.advance.all.in.one.page  =All in one page
 label.authoring.advance.shuffle.questions  =Shuffle questions
@@ -100,9 +100,9 @@ label.authoring.advance.allow.students.history.responses  =Allow learners to see
 label.authoring.advance.overall.feedback  =Overall feedback
 label.authoring.advance.grade.boundary  =Grade boundary
 label.authoring.advance.feedback  =Feedback
-label.authoring.advance.add.feedback.field  =Add feedback field
+label.authoring.advance.add.feedback.field  =Add feedback
 label.authoring.cancel.button  =Cancel
-label.authoring.basic.answer.options  =Answer Options
+label.authoring.basic.answer.options  =Answer options
 label.authoring.basic.instruction  =Instructions
 error.default.grade.wrong.format  =Default question grade should be of numeric format
 error.penalty.factor.wrong.format  =Penalty factor should be of float format
@@ -113,11 +113,11 @@ error.msg.file.not.found  =File not found exception occurs when uploading file.
 error.msg.io.exception  =IOException occurs when uploading file.
 error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
-error.monitoring.export.excel  =Export Assessment report failed because of this reason: {0}
+error.monitoring.export.excel  =Export assessment report failed because of this reason: {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 authoring.msg.one.question.to.be.saved  =There must be at least one question to be saved.
 label.learning.page  =Page:
-label.learning.title  =Assessment Learning
+label.learning.title  =Assessment
 label.learning.choose.one.answer  =Choose one of the following answers.
 label.learning.choose.at.least.one.answer  =Choose at least one answer.
 label.learning.matching.pairs.pick.up  =Pick up the corresponding answers
@@ -129,7 +129,7 @@ label.learning.ordering.sort.answers  =Sort answers in the right order
 label.learning.marks  =Marks for this submission: {0}/{1}.
 label.learning.penalty  =This submission attracted a penalty of {0}.
 label.learning.finish.test  =Finish
-label.learning.submit.all  =Submit All
+label.learning.submit.all  =Submit all
 label.learning.next.activity  =Next Activity
 label.learning.resubmit  =Resubmit
 label.learning.summary.started.on  =Started on
@@ -147,7 +147,7 @@ label.learning.countdown.time.left  =Time left
 label.learning.blockui.time.is.over  =Time is over. Processing your answers...
 label.learning.blockui.are.you.ready  =You are going to participate in activity that has time limitation. Are you ready to start?
 monitoring.tab.summary  =Summary
-monitoring.tab.statistics  =Statistic
+monitoring.tab.statistics  =Stats
 monitoring.tab.edit.activity  =Edit Activity
 monitoring.label.group  =Group
 monitoring.label.user.name  =Name
@@ -181,7 +181,7 @@ label.monitoring.question.summary.penalty  =Penalty
 label.monitoring.question.summary.average.mark  =Average mark
 label.monitoring.question.summary.group  =Group:
 label.monitoring.question.summary.ok  =Ok
-label.export.portfolio.activity.summary  =Activity Summary
+label.export.portfolio.activity.summary  =Activity summary
 label.export.portfolio.question.summaries  =Question summaries
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable.
 output.desc.learner.total.score  =User's total score
@@ -193,7 +193,7 @@ error.form.validation.error  =You have 1 error in a form. It has been highlighte
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 error.form.validation.hundred.score  =One of the answers should have a grade of 100% so it is possible to get full marks for this question.
 error.form.validation.positive.accepted.errors  =All the accepted errors should be positive.
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No learners yet
 label.cancel  =Cancel
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 button.try.again  =Try again
@@ -207,20 +207,20 @@ error.msg.repository  =A repository error occurred while trying to upload the fi
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
-label.authoring.advanced.notify.on.attempt.completion  =Notify instructor after learner completes attempt
+label.authoring.advanced.notify.on.attempt.completion  =Notify instructor when learner completes attempt
 event.learner.completes.attempt.subject  =LAMS: Learner completed attempt in Assessment tool
 event.learner.completes.attempt.body  =The learner {0} completed attempt in Assessment tool.\n\nThis message was send automatically, following tool''''s advanced settings.
 message.alertContentEdit  =Note: One or more learners have accessed this activity and it cannot longer be modified.
 warning.msg.authoring.do.you.want.to.delete  =Do you really want to delete this question?
 label.export.exported.on  =Exported on:
-label.export.question.summary  =Question Summary
-label.export.user.summary  =User Summary
-label.export.date.attempted  =Date Attempted
+label.export.question.summary  =Question summary
+label.export.user.summary  =Learner summary
+label.export.date.attempted  =Date attempted
 label.export.mark  =Mark
 label.export.time.taken  =Time taken from activity start (seconds)
 label.export.average  =Average
-label.export.summary.by.user  =Summary by User
-lable.export.summary.by.question  =Summary by Question
+label.export.summary.by.user  =Summary by learner
+lable.export.summary.by.question  =Summary by question
 label.export.user.id  =User ID
 label.authoring.basic.allow.learners.rich.editor  =Allow learners to use rich text editor
 label.authoring.advance.allow.students.right.answers  =Indicate choice(s) that have been answered correctly.
@@ -238,23 +238,23 @@ label.authoring.advance.passing.mark  =Assessment passing mark
 label.authoring.advance.choose.restriction  =Choose restriction:
 label.authoring.advance.passing.mark.none  =None
 label.learning.havent.reached.passing.mark  =Sorry, you haven''t scored {0} required to pass the activity. Please, try one more time.
-label.authoring.basic.add.question.to.pool  =Add question to pool
+label.authoring.basic.add.question.to.pool  =Add question
 label.authoring.basic.add.question.to.list  =Add question to list
-label.authoring.basic.question.bank.title  =Question Bank
+label.authoring.basic.question.bank.title  =Question bank
 label.authoring.basic.list.header.mark  =Mark
-label.authoring.basic.type.random.question  =Random Question
+label.authoring.basic.type.random.question  =Random question
 label.authoring.basic.select.random.question  =Random question from pool
 label.authoring.basic.random.question  =Question
 label.authoring.basic.warning.too.many.questions  =Too many questions in a list. Please, remove some of them.
 authoring.import.result  =Import tool content result
-authoring.title.import  =Import Questions
+authoring.title.import  =Import questions
 authoring.import.instruction  =Please choose questions to import.
-button.select.importfile  =Select File To Import
+button.select.importfile  =Select file to import
 msg.import.file.format  =The import file must be .xml file exported from assessment tool.
 label.import.file  =Import xml file
 button.import  =Import
-label.authoring.basic.import.questions  =Import questions
-label.authoring.basic.export.questions  =Export questions
+label.authoring.basic.import.questions  =Import
+label.authoring.basic.export.questions  =Export
 label.authoring.advance.display.summary  =Display all questions and answers once the learner finishes.
 label.authoring.basic.import.qti  =Import IMS QTI
 advanced.reflectOnActivity  =Add a notebook at end of Assessment with the following instructions:
@@ -269,7 +269,7 @@ label.learning.draft.autosaved  =Draft autosaved
 label.waiting.for.leader  =Please, wait while somebody will become a group leader
 label.users.from.group  =Other learners participating in current group:
 label.use.select.leader.tool.output  =Use leaders from Select Leader tool
-label.group.leader  =Group Leader: {0}
+label.group.leader  =Group leader: {0}
 label.refresh  =Refresh
 label.display.name.column  =Display name column
 label.authoring.answer.required  =Answer required?
@@ -297,6 +297,12 @@ label.question.options  =Question options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.ask.for.hedging.justification  =Ask for hedging justification?
+label.number.learners.per.session  =Number of learners per session
+label.tool.output  =Tool Output
+output.desc.best.score  =Best score
+label.tool.output.has.been.changed  =Tool Output has been changed
+output.desc.first.score  =First score
+output.desc.average.score  =Average score
 
 
-#======= End labels: Exported 291 labels for en AU =====
+#======= End labels: Exported 297 labels for en AU =====
