LDEV-3427: Confirmation for student selection grouping

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -114,6 +114,10 @@ label.hours  =hours
 label.minutes  =minutes
 label.seconds  =seconds
 label.schedule.gate.open.remaining  =You can only move through the gate and attempt the remaining activities in
+label.group.confirm.header =Confirm group selection
+label.group.confirm.button =Confirm
+label.group.confirm.areyoujoining =Are you joining
+
 
 
 #======= End labels: Exported 124 labels for en AU =====
