LDEV-4045	:Change these inputs from selects to input type="number"

--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -136,6 +136,8 @@ label.authoring.advance.maximum.reply  =Maximum:
 label.authoring.advance.no.minimum  =No minimum
 label.authoring.advance.no.maximum  =No maximum
 error.min.less.max  =The maximum number of posts must be greater than or equal to the minimum number of posts.
+error.min.post.char.less=The maximum number of characters per posting must be greater than minimum number of characters per posting.
+error.min.rate.less.max=The maximum number of ratings  must be greater than minimum ratings.
 error.limit.char.less.zero  =Limitation of input characters must be greater zero.
 error.less.mini.post  =You must contribute at least {0} posts in each topic before finish.
 error.must.have.topic  =Please add at least 1 topic when "allow learners to create new topics" option is off.
@@ -227,6 +229,8 @@ label.rateLimits.forum.reminder  =Rating limitation: minimum {0} and maximum {1}
 label.rateLimits.forum.reminder.min  =You must rate at least {0} postings.
 label.rateLimits.forum.reminder.max  =You can only rate up to {0} postings.
 js.error.validate.number  =There is an error with the minimum and/or maximum set for ratings. Please check and try again.
+js.error.validate.posting.number  =There is an error with the minimum and/or maximum set for postings. Please check and try again.
+js.error.validate.reply.number = There is an error with the minimum and/or maximum number of posts per learner per thread.
 label.rateLimits.topic.reminder  =You have rated {0} postings already.
 info.minimum.number.characters  =The minimum number of characters for your response is {0}.
 warn.minimum.number.characters  =You need to enter {0} characters more to proceed.
