LDEV-4072: Spreadsheet export for monitoring.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -145,3 +145,10 @@ event.sent.results.no.results=No results
 msg.results.sent={0} Email(s) Sent
 button.email.results=Email Results
 label.notify.user.of.results=Notify Users of Results
+label.number.of.team.members=No of team members
+label.average=Average
+label.for.user=For {0} 
+label.learner=Student
+label.spa.factor=SPA factor
+label.total.group.mark=Total team mark
+label.individual.mark=Individual mark
