LDEV-4076 Sysadmins should be allowed to mark users as required to use two-factor authentication

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -547,5 +547,7 @@ label.cleanup.preview.lesson.progress  =Deleting...
 error.theme.invalid  =Invalid theme
 label.theme  =Theme
 
+label.2FA.property.enable =Enable two-factor authentication
+
 
 #======= End labels: Exported 540 labels for en AU =====
