LDEV-4084: I18N the no such signup message.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -704,5 +704,5 @@ label.email.send.me.a.copy=Send me a copy
 
 error.cannot.load.thumbnail=Unable to load sequence thumbnail.
 label.lesson.introduction.updated=Lesson Introduction Updated
-
+no.such.signup.page.exist=No such signup page exists
 #======= End labels: Exported 439 labels for en AU =====
