LDEV-4063	:Force student response.

--- a/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
@@ -18,6 +18,7 @@ label.authoring.basic.title  =Title:
 label.authoring.basic.content  =Content:
 label.authoring.basic.instructions  =Instructions:
 advanced.lockOnFinished  =Lock when finished
+basic.forceResponse  =Force Response
 advanced.allowRichEditor  =Allow rich text editor
 label.filename  =Filename
 label.type  =Type
@@ -66,6 +67,7 @@ error.mark.invalid.number  ={0} field must be a valid number. Decimal points are
 error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.try.again  =Try again
+message.learner.blank.alertforceResponse =Response is mandatory.
 message.learner.blank.input  =You have not written anything. Are you sure this is correct?
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Notebook, you won't be able to continue adding notes.
