LDEV-4086: Add "Add all learners" button to Edit Class dialog.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -208,6 +208,9 @@ button.view.learners  =View/Email Learners
 button.view.learners.tooltip  =Shows all learners assigned to this lesson and allows to email them
 button.edit.class  =Edit Class
 button.edit.class.tooltip  =Edit the list of learners and monitors assigned to this lesson
+class.add.all.confirm =Do you want to add all learners to the class?
+class.add.all.success =All learners were added to the class
+button.edit.class.add.all =Add all learners
 button.open.im  =Open IM
 lesson.change.state  =Change Status:
 lesson.select.state  =Select status
