LDEV-4054: Updating English

--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 23 13:12:47 CST 2016 
  
 #=================== labels for Notebook =================# 
 
@@ -33,11 +33,10 @@ titleHeading.summary  =Summary
 titleHeading.instructions  =Instructions
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit activity
-titleHeading.exportPortfolio  =Export Portfolio
 heading.group  =Group {0}:
 heading.totalLearners  =Learners:
-heading.totalLearnersInGroup  =Total Learners in Group:
-heading.totalFinishedLearnersInGroup  =Finished Learners:
+heading.totalLearnersInGroup  =Total learners in group:
+heading.totalFinishedLearnersInGroup  =Finished learners:
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 message.summary  =There is no summary available for this tool.
 label.view  =View
@@ -48,7 +47,7 @@ button.cancel  =Cancel
 button.ok  =OK
 button.done  =Done
 button.save  =Save
-button.finish  =Next activity
+button.finish  =Next Activity
 button.next  =Next
 label.save  =Save
 label.cancel  =Cancel
@@ -118,6 +117,11 @@ label.no.entry  =No entry
 label.yes  =Yes
 label.no  =No
 label.reply.comment  =Instructor's comment
+message.session.name  =Group
+label.editing.options  =Editing options
+label.activity.completion  =End of activity
+basic.forceResponse  =Response required?
+message.learner.blank.alertforceResponse  =Response is required
 
 
-#======= End labels: Exported 112 labels for en AU =====
+#======= End labels: Exported 116 labels for en AU =====
