--- a/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 23 13:12:47 CST 2016 
  
 #=================== labels for Notebook =================# 
 
@@ -18,7 +18,6 @@ label.authoring.basic.title  =Title:
 label.authoring.basic.content  =Content:
 label.authoring.basic.instructions  =Instructions:
 advanced.lockOnFinished  =Lock when finished
-basic.forceResponse  =Force Response
 advanced.allowRichEditor  =Allow rich text editor
 label.filename  =Filename
 label.type  =Type
@@ -36,8 +35,8 @@ titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit activity
 heading.group  =Group {0}:
 heading.totalLearners  =Learners:
-heading.totalLearnersInGroup  =Total Learners in Group:
-heading.totalFinishedLearnersInGroup  =Finished Learners:
+heading.totalLearnersInGroup  =Total learners in group:
+heading.totalFinishedLearnersInGroup  =Finished learners:
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 message.summary  =There is no summary available for this tool.
 label.view  =View
@@ -48,7 +47,7 @@ button.cancel  =Cancel
 button.ok  =OK
 button.done  =Done
 button.save  =Save
-button.finish  =Next activity
+button.finish  =Next Activity
 button.next  =Next
 label.save  =Save
 label.cancel  =Cancel
@@ -67,7 +66,6 @@ error.mark.invalid.number  ={0} field must be a valid number. Decimal points are
 error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.try.again  =Try again
-message.learner.blank.alertforceResponse =Response is mandatory.
 message.learner.blank.input  =You have not written anything. Are you sure this is correct?
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Notebook, you won't be able to continue adding notes.
@@ -105,7 +103,6 @@ authoring.info.teacher.set.restriction  =The instructor has set a restriction to
 monitor.summary.notification  =Notification
 monitor.summary.date.restriction.set  =Deadline has been set
 monitor.summary.date.restriction.removed  =Deadline has been removed
-message.session.name =Group
 output.desc.all.users.entries.definition.notebook  =Each learners' entry in Notebook
 button.submit  =Finish
 message.monitoring.summary.no.session  =No sessions available
@@ -115,12 +112,16 @@ event.teacher.comment.body  =Comment:
 label.click.to.edit  =Click to edit
 label.notebook.entries  =Notebook entries
 label.user.name  =Name
-label.comment=Comment
+label.comment  =Comment
 label.no.entry  =No entry
-label.yes=Yes
-label.no=No
+label.yes  =Yes
+label.no  =No
 label.reply.comment  =Instructor's comment
-label.editing.options=Editing Options
-label.activity.completion=End of Activity
+message.session.name  =Group
+label.editing.options  =Editing options
+label.activity.completion  =End of activity
+basic.forceResponse  =Response required?
+message.learner.blank.alertforceResponse  =Response is required
 
-#======= End labels: Exported 112 labels for en AU =====
+
+#======= End labels: Exported 116 labels for en AU =====
