--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -697,6 +697,7 @@ label.password.symbols.allowed =Only these symbols are allowed
 label.password.restrictions =Password must follow the restrictions shown above
 label.password.must.contain =Password must contain
 label.password.must.ucase =at least 1 upper case letter
+label.password.must.lcase  =at least 1 lower case letter
 label.password.must.number=at least 1 number
 label.password.must.symbol =at least 1 symbol
 label.email.send.me.a.copy=Send me a copy
