LDEV-4096 Add role management feature for LTI tool consumers

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -525,6 +525,7 @@ label.manage.tool.consumers  =Maintain LTI Tool Consumers
 label.edit.tool.consumer  =Edit tool consumer details
 label.add.tool.consumer  =Add new tool consumer
 sysadmin.serversecret  =Secret
+sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 label.tool.consumers.count  =LTI Tool Consumers(s) in total
 
 #======= End labels: Exported 515 labels for en AU =====
