--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -548,6 +548,6 @@ error.theme.invalid  =Invalid theme
 label.theme  =Theme
 
 label.2FA.property.enable =Enable two-factor authentication
-
+sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 
 #======= End labels: Exported 540 labels for en AU =====
