LDEV-4054: updating English and Spanish

--- a/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 04:26:44 CST 2016 
  
 #=================== labels for Forum =================# 
 
@@ -12,16 +12,12 @@ activity.helptext  =Discussion tool useful for long running collaborations and s
 tool.display.name  =Forum Tool
 tool.description  =Tool for forums, also known as message boards.
 label.authoring.heading.basic  =Forum
-label.authoring.heading.basic.desc  =Basic input information for forum
-label.authoring.heading.advance.desc  =Please input advance options for Forum
-label.authoring.create.new.topic  =Create a new topic
+label.authoring.create.new.topic  =Create topic
 label.authoring.basic.title  =Title
 label.authoring.basic.instruction  =Instructions
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.save.button  =Save
 label.authoring.cancel.button  =Cancel
-label.authoring.online.filelist  =Online file list
-label.authoring.offline.filelist  =Offline file list
 label.authoring.advance.allow.edit  =Allow learners to change their own postings
 label.authoring.advance.use.richeditor  =Allow learners to use rich text editor
 label.authoring.advance.limited.input  =Maximum number of characters per posting
@@ -33,16 +29,15 @@ lable.topic.title.startedby  =Started by
 lable.topic.title.replies  =Replies
 lable.topic.title.mark  =Mark
 lable.topic.subject.by  =By
-label.back.to.forum  =Back to Topic List
+label.back.to.forum  =Back to topics
 lable.topic.title.message.number  =# of Msg
 lable.topic.title.average.mark  =Aver mark
-authoring.exception  =There is a problem in forum authoring page, the reason is {0}
 page.title.monitoring.content.userlist  =Summary
 page.title.monitoring.view.user.mark  =View user mark
 page.title.monitoring.edit.user.mark  =Edit user mark
 page.title.monitoring.view.activity  =View Activity
 page.title.monitoring.edit.activity  =Edit Activity
-page.title.monitoring.view.instructions  =View Instructions
+page.title.monitoring.view.instructions  =View instructions
 page.title.monitoring.view.topic  =View topic
 page.title.monitoring.statistic  =Statistic
 page.title.monitoring.definelater  =Forum Tool Define
@@ -51,16 +46,10 @@ label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
 label.monitoring.statistic.average.mark  =Average message mark
 lable.monitoring.statistic.total.message  =# of total message
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
-errors.header  =<b class="error">
-errors.footer  =</b>
 error.valueReqd  =Value Required
-error.inputFileTooLarge  =Input File size is too large!
 error.mark.needNumber  =Mark must be a number
 error.mark.invalid.number  =Mark is invalid number format
-error.fail.get.forum  =No Forum available
 error.title.empty  =Title can not be blank
-message.msg.maxFileSize  =Max 250K
 title.messageTopic.open  =Topic Details
 title.message.add  =Add Message
 title.message.open  =View Message
@@ -72,8 +61,8 @@ title.message.delete  =Delete Message
 message.label.subject  =Subject
 message.label.body  =Body
 message.label.attachment  =Attachment
-message.label.postedOn  =Posted On:
-message.label.threadReplies  =Thread Replies
+message.label.postedOn  =Posted on:
+message.label.threadReplies  =Thread replies
 message.link.reply  =Reply
 label.open  =Open
 label.delete  =Delete
@@ -140,19 +129,19 @@ error.limit.char.less.zero  =Limitation of input characters must be greater zero
 error.less.mini.post  =You must contribute at least {0} posts in each topic before finish.
 error.must.have.topic  =Please add at least 1 topic when "allow learners to create new topics" option is off.
 topic.message.attachment.hidden  =Message attachment hidden
-message.posting.limiting  =Posting Limits
+message.posting.limiting  =Posting limits
 advanced.reflectOnActivity  =Add a notebook at end of forum with the following instructions:
 error.reflection.emtpy  =Please input notebook entry
 title.reflection  =Notebook Entry
 label.continue  =Continue
 monitoring.user.fullname  =Name
-monitoring.user.loginname  =Login name
-monitoring.user.reflection  =Notebook Entry
-page.title.monitoring.view.reflection  =View Notebook Entries
+monitoring.user.loginname  =Login
+monitoring.user.reflection  =Notebook entry
+page.title.monitoring.view.reflection  =View Notebook entries
 label.default.user.name  =Instructor
 error.subject.required  =Subject can not be blank.
 error.body.required  =Body can not be blank.
-title.original.message.reply  =Original Message
+title.original.message.reply  =Original message
 output.desc.learner.number.of.posts  =Learner's number of postings in the forum
 label.download.marks.heading.date  =Date
 label.download.marks.heading.marks  =Marks
@@ -239,12 +228,19 @@ message.no.reflection.available  =No notebook entry was added.
 label.show.more.messages  =More posts
 label.loading.messages  =Loading more posts
 label.search  =Search...
-label.show.replies  =Show Replies
-label.hide.replies  =Hide Replies
-label.showhide.prompt  =Show/Hide Replies
+label.show.replies  =Show replies
+label.hide.replies  =Hide replies
+label.showhide.prompt  =Show/Hide replies
 message.complete.or.cancel.reply  =Please complete or cancel the current reply before starting a new reply.
 message.complete.or.cancel.edit  =Please complete or cancel the current edit before starting a new edit.
 error.cannot.redisplay.please.refresh  =Your changes have been saved but cannot be redisplayed. Please select refresh to reload the forum messages.
+label.posting.options  =Posting options
+label.activity.completion  =Activity completion
+label.notifications  =Notifications
+error.min.post.char.less  =The maximum number of characters per posting must be greater than minimum.
+error.min.rate.less.max  =The maximum number of ratings  must be greater than its minimum.
+js.error.validate.posting.number  =There is an error with the minimum and/or maximum set for postings. Please check and try again.
+js.error.validate.reply.number  =There is an error with the minimum and/or maximum number of posts per thread.
 
 
-#======= End labels: Exported 239 labels for en AU =====
+#======= End labels: Exported 235 labels for en AU =====
