--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 04:26:48 CST 2016 
  
 #=================== labels for Forum =================# 
 
@@ -12,18 +12,14 @@ activity.helptext  =Herramienta para debates muy \u00fatil para situaciones y tr
 tool.display.name  =Foro de discusi\u00f3n
 tool.description  =Herramienta para foros de discusi\u00f3n, tambi\u00e9n conocido como tabl\u00f3n de anuncios
 label.authoring.heading.basic  =Foro de discusi\u00f3n
-label.authoring.heading.basic.desc  =Contenido informativo b\u00e1sico para el debate
-label.authoring.heading.advance.desc  =Por favor, introduzca las instrucciones avanzadas para el Foro
 label.authoring.create.new.topic  =Crear nuevo tema de discusi\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
-label.authoring.online.filelist  =Archivos con instrucciones online
-label.authoring.offline.filelist  =Archivos con instrucciones offline
 label.authoring.advance.allow.edit  =Permite a los estudiantes cambiar sus propios mensajes
-label.authoring.advance.use.richeditor  =Permitir Editor HTML
+label.authoring.advance.use.richeditor  =Utilizar el editor de HTML
 label.authoring.advance.limited.input  =N\u00famero m\u00e1ximo de caracteres por mensaje
 lable.topic.title.subject  =Asunto
 lable.topic.title.body  =Mensaje
@@ -31,18 +27,17 @@ lable.topic.title.update  =\u00daltimo mensaje
 lable.topic.title.author  =Autor
 lable.topic.title.startedby  =Por
 lable.topic.title.replies  =Respuestas
-lable.topic.title.mark  =Nota de Evaluaci\u00f3n
+lable.topic.title.mark  =Nota de evaluaci\u00f3n
 lable.topic.subject.by  =De
 label.back.to.forum  =Volver al lista de temas.
 lable.topic.title.message.number  =N\u00famero de aportaciones
 lable.topic.title.average.mark  =Calificaci\u00f3n promedio
-authoring.exception  =Ha habido un problema con la creaci\u00f3n del foro, la raz\u00f3n es {0}
 page.title.monitoring.content.userlist  =Monitoreo de lista de estudiantes
 page.title.monitoring.view.user.mark  =Ver calificaci\u00f3n de usuarios
 page.title.monitoring.edit.user.mark  =Editar calificaci\u00f3n de usuarios
-page.title.monitoring.view.activity  =Ver Actividad
+page.title.monitoring.view.activity  =Ver actividad
 page.title.monitoring.edit.activity  =Editar Actividad
-page.title.monitoring.view.instructions  =Ver Instrucciones
+page.title.monitoring.view.instructions  =Ver instrucciones
 page.title.monitoring.view.topic  =Ver aportaciones
 page.title.monitoring.statistic  =Estad\u00edsticas
 page.title.monitoring.definelater  =Definir contenido del foro
@@ -51,16 +46,10 @@ label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
 label.monitoring.statistic.average.mark  =Nota promedio de aportaciones
 lable.monitoring.statistic.total.message  =Total de aportaciones
-message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
-errors.header  =<b class="error">
-errors.footer  =</b>
-error.valueReqd  =Valor Requerido
-error.inputFileTooLarge  =\u00a1El tama\u00f1o de este archivo es demasiado grande!
+error.valueReqd  =Valor requerido
 error.mark.needNumber  =La calificaci\u00f3n tiene que ser un n\u00famero entero
 error.mark.invalid.number  =La calificaci\u00f3n no es un n\u00famero entero
-error.fail.get.forum  =Foro no disponible
 error.title.empty  =El asunto no puede omitirse
-message.msg.maxFileSize  =Maximo 250KB
 title.messageTopic.open  =Detalles del tema
 title.message.add  =Agregar Mensaje
 title.message.open  =Ver Mensaje
@@ -245,6 +234,13 @@ label.showhide.prompt  =Mostrar/Ocultar Respuestas
 message.complete.or.cancel.reply  =Por favor, completar o cancelar la respuesta actual antes de iniciar una nueva respuesta.
 message.complete.or.cancel.edit  =Por favor, completar o cancelar la edici\u00f3n actual antes de comenzar una nueva edici\u00f3n.
 error.cannot.redisplay.please.refresh  =Sus cambios se han guardado, pero no pueden ser mostrado de nuevo. Por favor, seleccione Actualizar para volver a cargar los mensajes del foro.
+label.posting.options  =Opciones
+label.activity.completion  =Al finalizar la actividad
+label.notifications  =Notificaciones
+error.min.post.char.less  =El n\u00famero m\u00e1ximo de caracteres debe ser mayor al del m\u00ednimo.
+error.min.rate.less.max  =El m\u00e1ximo numero de evaluaciones debe ser mayor al del m\u00ednimo.
+js.error.validate.posting.number  =Se ha encontrado un error con los m\u00ednimos y/o m\u00e1ximos de contribuciones. Por favor intente nuevamente.
+js.error.validate.reply.number  =Se ha encontrado un error con el  los m\u00ednimos y/o m\u00e1ximo de respuestas. Por favor intente nuevamente.
 
 
-#======= End labels: Exported 239 labels for es ES =====
+#======= End labels: Exported 235 labels for es ES =====
