--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,6 +1,9 @@
 appName = mcq 
 #language code: en 
-#locale code: AU
+#locale code: AU 
+
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 05:05:03 CST 2016 
+ 
 #=================== labels for Multiple Choice Questions =================# 
 
 activity.title  =Multiple Choice
@@ -9,7 +12,6 @@ activity.helptext  =Learner answers a series of automated assessment questions. 
 tool.display.name  =Multiple Choice Tool
 tool.description  =Tool for learners to answer a series of automated assessment questions.
 label.tool.shortname  =MCQ
-label.authoring.mc  =Multiple Choice Authoring
 label.basic  =Basic
 label.advanced  =Advanced
 label.summary  =Summary
@@ -17,117 +19,38 @@ label.stats  =Stats
 label.editActivity  =Edit Activity
 label.authoring  =MCQ Authoring
 label.learning  =MCQ Learning
-label.preview  =MCQ Preview
-label.exportPortfolio  =MCQ Export Portfolio
-label.exportPortfolio.simple  =Export Portfolio
-label.authoring.mc.basic  =Please define the questions.
 label.monitoring  =MCQ Monitoring
-label.mc.questions  =Multiple Choice Questions
-label.authoring.mc.basic.editOptions  =Please define the question and/or its options.
-label.advanced.definitions  =Advanced Definitions
 label.authoring.title  =Title
 label.authoring.instructions  =Instructions
 label.Questions  =Questions
-label.weight  =Weight
-label.addNewQuestion  =Add New Question
+label.addNewQuestion  =Add new question
 label.moveDown  =Down
 label.add.question  =Add New
 label.add.option  =Add New
-label.mc.options  =Candidate Answers
 label.mc.options.col  =Candidate Answers:
-label.fileContent  =File Content
 label.learner.message  =You can only proceed to the activity after you have reached the passing mark
-label.individual.results.withRetries  =Summary of Multiple Choice Responses with Retries
-label.individual.results.withoutRetries  =Summary of Multiple Choice Responses
-label.viewAnswers  =Previous Answers
-label.learner.viewAnswers  =Learner's Answers
-label.withRetries.results.summary  =Multiple Choice with Retries Summary
-label.withoutRetries.results.summary  =Multiple Choice without Retries Summary
-label.learnersFinished  =learners have finished. Minimum passmark is
-label.learnersFinished.simple  =learners have finished.
+label.viewAnswers  =Previous answers
 label.topMark  =Top Mark:
-label.avMark  =Average Mark:
-label.loMark  =Lowest Mark:
+label.avMark  =Average mark:
+label.loMark  =Lowest mark:
 count.total.user  =Total Users Count:
-count.finished.user  =Finished User Count:
-count.max.attempt  =Maximum Attempt Count:
-label.attempts  =Attempts
 label.mark  =Mark:
-label.you.answered  =You answered:
-label.learner.answered  =Learner answered:
-label.redo.questions  =Redo Questions
-label.view.summary  =View Summary
-label.view.answers  =View Answers
+label.redo.questions  =Redo questions
 label.view  =View
 label.finished  =Next Activity
-label.attempt  =Attempt
-button.cancel  =Cancel
-button.upload  =Upload
-button.preview  =Preview
-button.advanced  =Advanced
-button.instructions  =Instructions
-tool.icon.name  =MC
-button.add  =Add
-button.addNewQuestion  =Add
-button.remove  =Delete
 button.submit  =Submit
-button.done  =Done
-button.getNextQuestion  =Next
-button.next  =Next
-button.nextQuestion  =Next Question
 button.continue  =Continue
-button.getPreviousQuestion  =Previous
-label.percent  =%
-label.option  =Option
-label.option1  =Option 1
-label.options  =Options
-label.option.correct  =Correct
-label.candidateAnswers  =Candidate Answers
 label.isCorrect  =Correct?
-sbmt.successful  =The content has been created successfully.
-label.monitoringReport.title  =Monitoring Report Title
 label.question.only  =Question
 label.question  =Question
-label.question.col  =Question:
-label.question1  =Question 1
-radiobox.defineLater  =Define in Monitor
-radiobox.synchInMonitor  =Sync in Monitor
-radiobox.usernameVisible  =Username Visible
-radiobox.questionsSequenced  =Questions Sequenced
-radiobox.passmark  =Pass Mark
-radiobox.showFeedback  =Show Feedback
-radiobox.sln  =Show Learner's Report
+radiobox.passmark  =Pass mark
 radiobox.onepq  =One question per page
-radiobox.retries  =Allow Retries
-label.report.title  =Report Title
-label.report.endLearningMessage  =End of Activity Message
-label.offlineInstructions  =Offline Instructions
-label.onlineInstructions  =Online Instructions
-label.uploadedOfflineFiles  =Uploaded Offline Files:
-label.uploadedOnlineFiles  =Uploaded Online Files:
+radiobox.retries  =Allow retries
 option.correct  =Correct
-option.incorrect  =Incorrect
-label.feedback.incorrect  =Feedback if answered incorrectly:
-label.feedback.correct  =Feedback if answered correctly:
-label.learner.redo  =Are you sure you want to answer the questions again?
-label.learner.bestMark  =Your best mark so far is
 label.outof  =out of
-label.mustGet  =Must get at least
-label.toFinish  =to finish
 label.save  =Save
 label.cancel  =Cancel
 feedback  =Please address the following issues before submit. <br>
-error.questions.submitted.none  =Please correct this: No questions have been submitted.
-error.question.empty  =Please correct this: The question text can not be empty.
-error.weights.empty  =Please correct this: The question weights can not be empty.
-error.checkBoxes.empty  =Please correct this: No candidate answer has been selected.
-error.weights.zero  =Please correct this: The question weights can not be 0.
-error.weights.notInteger  =Please correct this: The question weights must be an integer.
-error.question.weight.total  =Please correct this: The total question weight:100 has been reached.
-error.answers.duplicate  =Please correct this: The candidate answers must be unique.
-error.emptyQuestion  =Please enter the question text. The chosen question can not be empty.
-error.singleOption  =Please correct this: There must be at least 2 candidate answers.
-error.emptyWeight  =Sorry, the question can not be added without a weight.
 error.passMark.empty  =Please correct this: Pass Mark can not be empty.
 options.count.zero  =Please correct this: There must be at least one candidate answer.
 error.passmark.notInteger  =Please correct this: Pass Mark can only be an integer.
@@ -144,77 +67,66 @@ error.content.inUse  =modification of the content is not allowed since one or mo
 error.noLearnerActivity  =Summary report is not available since no learners attempted the activity yet.
 label.answers  =Answers:
 button.endLearning  =Next Activity
-label.learning.user  =User
-label.learning.attemptTime  =Attempt Date/Time
+label.learning.attemptTime  =Attempt date
 label.learning.response  =Response
 label.user  =User
-label.attemptTime  =Attempt Date/Time
+label.attemptTime  =Attempt date
 label.response  =Response
 label.learning.forceOfflineMessage  =This activity is not being done on the computer. Please see your instructor for details.
 error.defineLater  =Please wait for the instructor to complete the contents of this activity.
-error.noStudentActivity  =Sorry, the report can not be generated. <br> No learner has attempted the activity yet.
 group.label  =Group
 button.summary  =Summary
 button.editActivity  =Edit Activity
 button.stats  =Stats
 label.edit  =Edit
 label.update  =Update
-label.selectGroup  =Select Group:
-label.learner.progress  =Learner Progress Report
+label.selectGroup  =Select group:
 label.stats.allGroups  =All Groups:
 label.stats.totalAllGroups  =Total count of all learners:
-error.system.mc  =<font color\="red">A system exception has occured. Please contact your system administrator. The error to report is\: <br/> <b>{0}</b></font>
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.forceFinishMessage  =Responses are no more allowed. Please finish.
 label.correct  =Correct
 label.passingMark  =Passing Mark
 label.mcqSummary  =MCQ Summary
-label.yourAnswers  =Learner's Answers:
+label.yourAnswers  =Learner's answers:
 label.learner  =Learner
 button.try.again  =Try again
-label.feedback  =Question Feedback:
+label.feedback  =Question feedback
 label.notEnoughMarks  =As you have not achieved the passing mark, you have to try the questions again.
-label.tip.moveQuestionDown  =Moves question down
-label.tip.moveQuestionUp  =Moves question up
+label.tip.moveQuestionDown  =Down
+label.tip.moveQuestionUp  =Up
 label.tip.editOptions  =Enables editing of candidate answers
 label.tip.removeQuestion  =Removes question
 label.tip.removeCandidate  =Removes candidate answer
-label.studentMarks  =Learner Marks
-label.export.learner  =Portfolio Export for Learner
-label.export.teacher  =Portfolio export for instructor
-label.studentMark  =Learner Mark
+label.studentMarks  =Learner marks
 label.authoring.title.col  =Title:
 label.authoring.instructions.col  =Instructions:
 label.candidateAnswer  =Candidate Answer
 label.total  =Total
-label.report.title.col  =Report Title:
-label.report.endLearningMessage.col  =End of Activity Message:
 label.continue  =Continue
 label.reflect  =Add a notebook at end of MCQ with the following instructions:
-label.notebook.entries  =Notebook Entries
-label.reflection  =Notebook Entry
-label.view.reflection  =View Notebook Entries
+label.notebook.entries  =Notebook entries
+label.reflection  =Notebook entry
+label.view.reflection  =View notebook entries
 label.close  =Close
 label.question.marks  =Marks
-label.update.list  =Update List
 label.tip.editQuestion  =Enables editing of question
 candidates.none.correct  =Please fix this: There must be 1 correct candidate answer out of at least 2 candidate answers.
 count.finished.session  =Finished Session Count:
-label.add.candidates  =Add blank answer
+label.add.candidates  =Add answer
 label.add.new.question  =Add
 label.marks  =mark(s)
-label.new.question  =New Question
 label.questions  =Questions
 label.questions.worth  =This question is worth
-label.save.question  =Create Question
+label.save.question  =Add question
 label.tip.deleteQuestion  =Deletes question
 label.tip.editCandidate  =Enables editing of candidate answers
 label.tip.moveCandidateDown  =Moves candidate answer down
 label.tip.moveCandidateUp  =Moves candidate answer up
-question.blank  =Please fix this: Question text can not be blank.
-question.duplicate  =Please fix this: There are duplicate question entries.
+question.blank  =Question text can not be blank.
+question.duplicate  =There are duplicate question entries.
 questions.none.submitted  =No questions submitted. Please add at least one question.
-label.edit.question  =Edit Question
+label.edit.question  =Edit question
 label.feedback.simple  =Feedback:
 candidates.duplicate.correct  =Please fix this: There must be one and only one correct candidate answer.
 label.group.results  =Group's top and average marks
@@ -224,11 +136,9 @@ candidates.setFirst  =Please be informed that the first candidate answer has bee
 candidates.blank  =Please fix this: Candidate answer text can not be blank.
 label.showMarks  =Show top and average mark
 label.randomize  =Present answers in randomized order
-answers.submitted.none  =Submission is not allowed. Please select at least one answer for each of the questions.
 message.no.reflection.available  =No notebook available
-label.attempt.count  =Attempt Count:
-label.final.attempt  =Final Attempt:
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
+label.attempt.count  =Attempt count:
+label.final.attempt  =Final attempt:
 output.desc.learner.mark  =Learner's total mark
 output.desc.learner.all.correct  =Are learner's answers all correct?
 label.displayAnswers  =Display correct answers and score after last question
@@ -236,17 +146,17 @@ label.monitoring.yesDisplayAnswers  =Learners are able to see the answers for al
 label.monitoring.noDisplayAnswers1  =Learners are not able to see the answers for the questions
 label.monitoring.noDisplayAnswers2  =Do you want to allow learners to see the answers now?
 button.monitoring.noDisplayAnswers  =Yes
-output.desc.learner.all.correct.true  =All Correct
-output.desc.learner.all.correct.false  =Not All Correct
-label.monitoring.downloadMarks.button  =Download Marks
-label.monitoring.downloadMarks.question.mark  =Question {0} (Mark: {1})
+output.desc.learner.all.correct.true  =All correct
+output.desc.learner.all.correct.false  =Not all correct
+label.monitoring.downloadMarks.button  =Export marks
+label.monitoring.downloadMarks.question.mark  =Question {0} (mark: {1})
 label.monitoring.downloadMarks.username  =Username
 error.monitoring.spreadsheet.download  =An error occurred while preparing the marks spreadsheet for download.
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.td.addNotebook  =Add a notebook at the end of MCQ
-monitor.summary.td.notebookInstructions  =Notebook Instructions
+monitor.summary.td.notebookInstructions  =Notebook instructions
 error.pedagogical.planner.empty.answer.selected  =In question {0} correct answer cannot be blank.
 monitor.summary.date.restriction  =Deadline
 monitor.summary.when.date.restriction.is.set  =Learners will not be able to answer questions after the set date and time.
@@ -265,9 +175,9 @@ label.report.by.student  =Report by learner
 label.not.available  =N/A
 label.legend  =Legend
 label.denotes.correct.answer  =*- Denotes the correct answer
-label.correct.answer  =Correct Answer
+label.correct.answer  =Correct answer
 label.ave  =Average
-label.class.mean  =Class Mean
+label.class.mean  =Class mean
 label.median  =Median
 label.learning.draft.autosaved  =Draft autosaved
 label.monitoring.summary.user.name  =Name
@@ -278,12 +188,19 @@ label.monitoring.user.summary.grade  =Grade
 label.waiting.for.leader  =Please, wait while somebody will become a group leader.
 label.users.from.group  =Other learners participating in current group:
 label.use.select.leader.tool.output  =Use leaders from Select Leader tool
-label.group.leader  =Group Leader: {0}
+label.group.leader  =Group leader: {0}
 label.refresh  =Refresh
 label.prefix.sequential.letters.for.each.answer  =Prefix sequential letters for each answer
 label.info.use.select.leader.outputs  =Group leader's option is enabled
 label.monitoring.group.leader  =Group leader
 label.authoring.export.qti  =Export IMS QTI
+label.select.leader  =Select leader
+label.question.options  =Question options
+label.activity.completion  =End of activity
+label.tool.output  =Tool output
+label.tool.output.has.been.changed  =Tool output has changed
+label.operation.failed  =Operation failed
+answers.submitted.none  =Select at least one answer for each of the questions.
 
 
-#======= End labels: Exported 281 labels for en AU =====
+#======= End labels: Exported 195 labels for en AU =====
