LDEV-4054: Updating English and Spanish

--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 04:26:48 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 06:04:02 CST 2016 
  
 #=================== labels for Forum =================# 
 
@@ -241,6 +241,7 @@ error.min.post.char.less  =El n\u00famero m\u00e1ximo de caracteres debe ser may
 error.min.rate.less.max  =El m\u00e1ximo numero de evaluaciones debe ser mayor al del m\u00ednimo.
 js.error.validate.posting.number  =Se ha encontrado un error con los m\u00ednimos y/o m\u00e1ximos de contribuciones. Por favor intente nuevamente.
 js.error.validate.reply.number  =Se ha encontrado un error con el  los m\u00ednimos y/o m\u00e1ximo de respuestas. Por favor intente nuevamente.
+label.topics  =Temas
 
 
-#======= End labels: Exported 235 labels for es ES =====
+#======= End labels: Exported 236 labels for es ES =====
