--- a/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 04:26:44 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 06:04:07 CST 2016 
  
 #=================== labels for Forum =================# 
 
@@ -241,6 +241,7 @@ error.min.post.char.less  =The maximum number of characters per posting must be 
 error.min.rate.less.max  =The maximum number of ratings  must be greater than its minimum.
 js.error.validate.posting.number  =There is an error with the minimum and/or maximum set for postings. Please check and try again.
 js.error.validate.reply.number  =There is an error with the minimum and/or maximum number of posts per thread.
+label.topics  =Topics
 
 
-#======= End labels: Exported 235 labels for en AU =====
+#======= End labels: Exported 236 labels for en AU =====
