LDEV-4078	:Sysadmin shouldn't need to change the user's password when modifying her details

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -94,6 +94,7 @@ admin.user.create  =Create new user
 admin.user.assign.roles  =Assign roles
 admin.user.find  =Find users
 admin.user.edit  =Edit user details
+admin.user.changePassword  =Change Password
 admin.user.disable  =Disable user
 admin.user.actions  =Actions
 admin.user.import  =Import users
@@ -537,6 +538,7 @@ label.password.symbols.allowed  =Only these symbols are allowed
 label.password.restrictions  =Password must follow the restrictions shown above
 label.password.must.contain  =Password must contain
 label.password.must.ucase  =at least 1 upper case letter
+label.password.must.lcase  =at least 1 lower case letter
 label.password.must.number  =at least 1 number
 label.password.must.symbol  =at least 1 symbol
 sysadmin.batch.preview.lesson.delete  =Delete old preview lessons
