--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
@@ -264,6 +264,6 @@ label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.words.required  =Words required
 label.other.options  =Other settings
-
+label.allow.review.other.responses  =Allow review other responses?
 
 #======= End labels: Exported 258 labels for en AU =====
