LDEV-4030	:Disable login for a few minutes after X number of attempts

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -525,6 +525,8 @@ config.stacktrace.error  =Show full error message (stack trace)
 config.password.minimum.characters  =Minimum number of characters
 config.password.uppercase  =Must contain uppercase letter(s)
 config.password.lowercase  =Must contain lowercase letter(s)
+config.failed.attempts  =Failed Attempts
+config.lock.out.time  =Lock out time
 config.header.password.policy  =Password policy
 config.password.numerics  =Must contain at least a number
 config.password.symbols  =Must contain at least one symbol(s)
