LDEV-4023	:Implement password policy

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -537,7 +537,7 @@ label.password.max.length  =must be less than 25 characters
 label.password.min.length  =must be at least {0} characters long
 label.password.old.must.entered  =Old password must be entered
 label.password.symbols.allowed  =Only these symbols are allowed
-label.password.restrictions  =Password must follow the restrictions shown above
+label.password.restrictions  =Password must follow the restrictions shown 
 label.password.must.contain  =Password must contain
 label.password.must.ucase  =at least 1 upper case letter
 label.password.must.lcase  =at least 1 lower case letter
