LDEV-4030 :Disable login for a few minutes after X number of attempts

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -22,7 +22,7 @@ label.password.confirm.new.password  =Confirm New Password
 heading.password.changed.screen  =Password Changed
 msg.password.changed  =Your password has been changed.
 error.login  =Sorry, that username or password is not known. Please try again.
-error.lockedOut  =Sorry,you are currently locked out.
+error.locked.out  =Sorry,you are currently locked out.
 button.login  =Login
 label.user.guide  =[HELP]
 msg.loading  =Loading...
