LDEV-4055: small fixes

--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -28,6 +28,7 @@ label.authoring.basic.add.website  =Add Zipped Website
 label.authoring.basic.add.learning.object  =Add IMS Content Package
 label.authoring.basic.resource.list.title  =Resource list
 label.authoring.basic.resource.url  =URL
+label.authoring.basic.resource.url.placeholder = include http:// or https://
 label.authoring.basic.resource.file  =File
 label.authoring.basic.resource.website  =Website
 label.authoring.basic.resource.learning.object  =IMS CP
